RESOLVED FIXED62678
When the window is small enough, the scrollbars are misplaced with painting artifacts, after changing the scrollbar appearance
https://bugs.webkit.org/show_bug.cgi?id=62678
Summary When the window is small enough, the scrollbars are misplaced with painting a...
Beth Dakin
Reported 2011-06-14 16:47:00 PDT
If you make a window small enough so that webkit.org has a horizontal and vertical scrollbar, and then you change the scrollbar appearance preference on the Mac, the layout gets totally messed up. <rdar://problem/9414015> Patch forthcoming.
Attachments
Patch (4.99 KB, patch)
2011-06-14 16:58 PDT, Beth Dakin
mitz: review+
Beth Dakin
Comment 1 2011-06-14 16:58:04 PDT
mitz
Comment 2 2011-06-14 17:02:38 PDT
Comment on attachment 97196 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=97196&action=review > Source/WebCore/ChangeLog:11 > + Get rid of the FrameView implementation of scrollbarStyleChanged() it's approach Typ'o: it's
Beth Dakin
Comment 3 2011-06-14 17:09:21 PDT
Changed committed with revision 88877.
Note You need to log in before you can comment on or make changes to this bug.